--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,10 @@
-{
-  "nodes": [
-    { "id": "server1", "label": "Server 1", "x": 100, "y": 100 },
-    { "id": "server2", "label": "Server 2", "x": 300, "y": 100 }
-  ],
-  "edges": [
-    { "from": "server1", "to": "server2", "label": "Connection" }
-  ]
-}
+flowchart:
+  nodes:
+    - id: "jenerator1"
+      label: "Jenerator 1"
+      description: "Çıkış Voltaj: ${cikis_voltaj{instance='jenerator1tepesu'}} V"
+      x: 100
+      y: 200
+      style:
+        fill: ${cikis_voltaj{instance='jenerator1tepesu'}} > 220 ? 'green' : 'red'
+  edges: []
