--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -1,10 +1,15 @@
-layout:
-  width: 1200
-  height: 800
-  background: "#ffffff"
-refreshInterval: 5s
-theme:
-  node:
-    default:
-      shape: rectangle
-      textColor: "#000000"
+connections:
+  - from: "jenerator1tepesu"
+    to: "eatonupstepesu"
+    label: "Jeneratör 1 -> UPS 1"
+    color: "${cikis_voltaj{instance='jenerator1tepesu'} > 200 ? 'blue' : 'red'}"
+
+  - from: "jenerator2tepesu"
+    to: "eatonups2tepesu"
+    label: "Jeneratör 2 -> UPS 2"
+    color: "${cikis_voltaj{instance='jenerator2tepesu'} > 200 ? 'blue' : 'red'}"
+
+  - from: "eatonupstepesu"
+    to: "eatonups2tepesu"
+    label: "UPS 1 -> UPS 2"
+    color: "${cikis_voltaj{instance='eatonupstepesu'} > 200 ? 'blue' : 'red'}"
