--- a/panelConfig.yaml
+++ b/panelConfig.yaml
@@ -1,78 +1,37 @@
-panels:
-  - name: "Jenerator 1 Çıkış Voltajı"
-    selector: '[id="jenerator1"]'
-    query: 'cikis_voltaj{instance="jenerator1tepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
-  
-  - name: "Jenerator 2 Çıkış Voltajı"
-    selector: '[id="jenerator2"]'
-    query: 'cikis_voltaj{instance="jenerator2tepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
+---
 
-  - name: "Eaton UPS 1 Çıkış Voltajı"
-    selector: '[id="eatonups1-cikis"]'
-    query: 'cikis_voltaj{instance="eatonupstepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
+colors:
+  red: "#FF0000"
+  amber: "#FFBF00"
+  green: "#00FF00"
 
-  - name: "Eaton UPS 1 Giriş Voltajı"
-    selector: '[id="eatonups1-giris"]'
-    query: 'giris_voltaj{instance="eatonupstepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
+# The grafana variable has to impact a query, but if it does the first match
+# per variable will be applied to the thresholds. If using with test-data you
+# can get around this 'update' restriction by adding the variable to your panel title.
+variableThresholdScalars:
+  site:
+    - {variableValuePattern: ".*Cicely.*", thresholdScalar: 2, cellIdPatternScope: [".*box.*"]}
+  environment:
+    - {variableValuePattern: "dev", thresholdScalar: 0.2, cellIdPatternScope: [".*box.*"]}
 
-  - name: "Eaton UPS 2 Çıkış Voltajı"
-    selector: '[id="eatonups2-cikis"]'
-    query: 'cikis_voltaj{instance="eatonups2tepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
-
-  - name: "Eaton UPS 2 Giriş Voltajı"
-    selector: '[id="eatonups2-giris"]'
-    query: 'giris_voltaj{instance="eatonups2tepesu"}'
-    type: "gauge"
-    thresholds:
-      - value: 200
-        color: "red"
-      - value: 220
-        color: "yellow"
-      - value: 240
-        color: "green"
-    unit: "V"
+thresholds:
+  queuecount:
+    - {color: "green", level: 10}
+    - {color: "amber", level: 30}
+    - {color: "red", level: 60}
+  gen:
+    - {color: "green", level: 200}
+    - {color: "amber", level: 300}
+    - {color: "red", level: 1500}
+  dbtrans:
+    - {color: "green", level: 200}
+    - {color: "amber", level: 230}
+    - {color: "red", level: 240}
+  queuelatency:
+    - {color: "green", level: 30}
+    - {color: "amber", level: 60}
+    - {color: "red", level: 90}
+  normalized:
+    - {color: "green", level: 0.4}
+    - {color: "amber", level: 0.6}
+    - {color: "red", level: 0.8}
