--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -1,5 +1,69 @@
-site:
-  name: "Sistem Odası İzleme Paneli"
-  svg: "sistemodasi.drawio.svg"
-  panels:
-    - file: "panelConfig.yaml"
+---
+
+gradientMode: "hue"
+cellIdPreamble: "cell-"
+cells: 
+  jenerator1:
+    dataRef: "cikis_voltaj{instance="jenerator1tepesu"}"
+    label:
+      separator: "cr"
+      units: "V"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "gen"
+  jenerator1:
+    dataRef: "cikis_voltaj{instance="jenerator2tepesu"}"
+    label:
+      separator: "cr"
+      units: "V"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "gen"
+  eatonupstepesu:
+    dataRef: "cikis_voltaj{instance="eatonupstepesu"}"
+    label:
+      separator: "cr"
+      units: "V"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "gen"
+  rabbitmq_queue_count:
+    dataRef: "test-data-small-cos"
+    label:
+      separator: "cr"
+      units: "none"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "queuecount"
+  mem_queue_depth:
+    dataRef: "test-data-large-sin"
+    label:
+      separator: "cr"
+      units: "none"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "queuedepth"
+  db_transactions:
+    dataRef: "test-data-large-sin"
+    label:
+      separator: "cr"
+      units: "ops"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "dbtrans"
+  duplicate_lock_rate:
+    dataRef: "test-data-small-cos"
+    label:
+      separator: "cr"
+      units: "ops"
+      decimalPoints: 0
+    labelColor:
+      thresholdsRef: "dbtrans"
+  inhouse_queue_latency:
+    dataRef: "test-data-small-sin"
+    label:
+      separator: "cr"
+      units: "s"
+      decimalPoints: 1
+    labelColor:
+      thresholdsRef: "queuelatency"
