--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -1,69 +1,37 @@
 ---
 
-gradientMode: "hue"
-cellIdPreamble: "cell-"
-cells: 
-  jenerator1:
-    dataRef: "cikis_voltaj{instance="jenerator1tepesu"}"
-    label:
-      separator: "cr"
-      units: "V"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "gen"
-  jenerator1:
-    dataRef: "cikis_voltaj{instance="jenerator2tepesu"}"
-    label:
-      separator: "cr"
-      units: "V"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "gen"
-  eatonupstepesu:
-    dataRef: "cikis_voltaj{instance="eatonupstepesu"}"
-    label:
-      separator: "cr"
-      units: "V"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "gen"
-  rabbitmq_queue_count:
-    dataRef: "test-data-small-cos"
-    label:
-      separator: "cr"
-      units: "none"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "queuecount"
-  mem_queue_depth:
-    dataRef: "test-data-large-sin"
-    label:
-      separator: "cr"
-      units: "none"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "queuedepth"
-  db_transactions:
-    dataRef: "test-data-large-sin"
-    label:
-      separator: "cr"
-      units: "ops"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "dbtrans"
-  duplicate_lock_rate:
-    dataRef: "test-data-small-cos"
-    label:
-      separator: "cr"
-      units: "ops"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "dbtrans"
-  inhouse_queue_latency:
-    dataRef: "test-data-small-sin"
-    label:
-      separator: "cr"
-      units: "s"
-      decimalPoints: 1
-    labelColor:
-      thresholdsRef: "queuelatency"
+colors:
+  red: "#FF0000"
+  amber: "#FFBF00"
+  green: "#00FF00"
+
+# The grafana variable has to impact a query, but if it does the first match
+# per variable will be applied to the thresholds. If using with test-data you
+# can get around this 'update' restriction by adding the variable to your panel title.
+variableThresholdScalars:
+  site:
+    - {variableValuePattern: ".*Cicely.*", thresholdScalar: 2, cellIdPatternScope: [".*box.*"]}
+  environment:
+    - {variableValuePattern: "dev", thresholdScalar: 0.2, cellIdPatternScope: [".*box.*"]}
+
+thresholds:
+  queuecount:
+    - {color: "green", level: 10}
+    - {color: "amber", level: 30}
+    - {color: "red", level: 60}
+  gen:
+    - {color: "green", level: 200}
+    - {color: "amber", level: 300}
+    - {color: "red", level: 1500}
+  dbtrans:
+    - {color: "green", level: 200}
+    - {color: "amber", level: 230}
+    - {color: "red", level: 240}
+  queuelatency:
+    - {color: "green", level: 30}
+    - {color: "amber", level: 60}
+    - {color: "red", level: 90}
+  normalized:
+    - {color: "green", level: 0.4}
+    - {color: "amber", level: 0.6}
+    - {color: "red", level: 0.8}
