--- a/panelConfig.yaml
+++ b/panelConfig.yaml
@@ -1,69 +1,60 @@
----
-
 gradientMode: "hue"
 cellIdPreamble: "cell-"
 cells: 
   jenerator1:
-    dataRef: "cikis_voltaj{instance="jenerator1tepesu"}"
+    dataRef: "cikis_voltaj{instance=\"jenerator1tepesu\"}"
     label:
       separator: "cr"
       units: "V"
       decimalPoints: 0
     labelColor:
       thresholdsRef: "gen"
-  jenerator1:
-    dataRef: "cikis_voltaj{instance="jenerator2tepesu"}"
+  jenerator2:
+    dataRef: "cikis_voltaj{instance=\"jenerator2tepesu\"}"
     label:
       separator: "cr"
       units: "V"
       decimalPoints: 0
     labelColor:
       thresholdsRef: "gen"
-  eatonupstepesu:
-    dataRef: "cikis_voltaj{instance="eatonupstepesu"}"
+  eatonupstepesu_out:
+    dataRef: "cikis_voltaj{instance=\"eatonupstepesu\"}"
     label:
       separator: "cr"
       units: "V"
       decimalPoints: 0
     labelColor:
       thresholdsRef: "gen"
-  rabbitmq_queue_count:
-    dataRef: "cikis_voltaj{instance="eatonupstepesu"}"
+  eatonupstepesu_in:
+    dataRef: "giris_voltaj{instance=\"eatonupstepesu\"}"
     label:
       separator: "cr"
-      units: "none"
+      units: "V"
       decimalPoints: 0
     labelColor:
-      thresholdsRef: "queuecount"
-  mem_queue_depth:
-    dataRef: "test-data-large-sin"
+      thresholdsRef: "gen"
+  eatonups2tepesu_out:
+    dataRef: "cikis_voltaj{instance=\"eatonups2tepesu\"}"
     label:
       separator: "cr"
-      units: "none"
+      units: "V"
       decimalPoints: 0
     labelColor:
-      thresholdsRef: "queuedepth"
-  db_transactions:
-    dataRef: "test-data-large-sin"
+      thresholdsRef: "gen"
+  eatonups2tepesu_in:
+    dataRef: "giris_voltaj{instance=\"eatonups2tepesu\"}"
     label:
       separator: "cr"
-      units: "ops"
+      units: "V"
       decimalPoints: 0
     labelColor:
-      thresholdsRef: "dbtrans"
-  duplicate_lock_rate:
-    dataRef: "test-data-small-cos"
-    label:
-      separator: "cr"
-      units: "ops"
-      decimalPoints: 0
-    labelColor:
-      thresholdsRef: "dbtrans"
-  inhouse_queue_latency:
-    dataRef: "test-data-small-sin"
-    label:
-      separator: "cr"
-      units: "s"
-      decimalPoints: 1
-    labelColor:
-      thresholdsRef: "queuelatency"
+      thresholdsRef: "gen"
+
+thresholds:
+  gen:
+    - value: 200
+      color: "red"
+    - value: 220
+      color: "yellow"
+    - value: 240
+      color: "green"
